like eklıyor ama goruntulemede sorunlar var

--- a/src/BlogBundle/Resources/views/Default/index.html.twig
+++ b/src/BlogBundle/Resources/views/Default/index.html.twig
@@ -28,6 +28,17 @@
 
        <b>{{ y.user.username }} : </b>
         {{ y.icerik }}
+
+       {% for b in y.begeniler %}
+            {% if b.user == app.user %}
+                Lıked
+                {% elseif  %}
+            {% endif %}
+
+        {% endfor %}
+
+
+
         {% if y.user == app.user %}
             <a href="{{ path('blog_yazi_sil',{'id':y.id })}}">Yazimi Sil</a>
         {% endif %}
