--- a/src/BlogBundle/Resources/views/Default/profil.html.twig
+++ b/src/BlogBundle/Resources/views/Default/profil.html.twig
@@ -11,17 +11,21 @@
 
         <b>{{ profil.username }}</b>
         <br>
+        {% if app.user %}
+
+
         {% if app.user != profil %}
 
             {% if takip_ediyorsun == 1 %}
-                <a href="{{ path('blog_takip_bırak', {'id': profil.id}) }}">Takip bırak</a>
+                <a href="{{ path('blog_takip_bırak', {'username': profil.username}) }}">Takip bırak</a>
             {% else %}
 
-            <a href="{{ path('blog_takip_et', {'id': profil.id}) }}">Takip et</a>
+            <a href="{{ path('blog_takip_et', {'username': profil.username}) }}">Takip et</a>
 
             {% endif %}
         {% else %}
             senin profilin
+        {% endif %}
         {% endif %}
         <br>
         <hr>
