--- a/src/BlogBundle/Resources/views/Default/index.html.twig
+++ b/src/BlogBundle/Resources/views/Default/index.html.twig
@@ -52,7 +52,7 @@
 
         {% for y in yazilar %}
 
-            <a href="{{ path('blog_profil',{ 'id':y.user.id }) }}">  <b>{{ y.user.username }} : </b>  </a>
+            <a href="{{ path('blog_profil',{ 'username':y.user.username }) }}">  <b>{{ y.user.username }} : </b>  </a>
             {{ y.icerik }}
 
             Begeni sayısı <br>
@@ -81,12 +81,13 @@
                 <br>
             {% endfor %}
 
+        {% if app.user %}
             <form action="{{ path('blog_yazi_yorum') }}" method="post">
                 <input type="text" name="yorum" placeholder="yorum gir..">
                 <input type="hidden" name="yazi_id" value="{{ y.id }}">
                 <button type="submit">Yorum Gönder</button>
             </form>
-
+            {% endif %}
             <hr>
             <br>
 
