yorum ekleme ve yazi ekleme bos mesaj gonderme kapatıldı

--- a/src/BlogBundle/Resources/views/Default/profil.html.twig
+++ b/src/BlogBundle/Resources/views/Default/profil.html.twig
@@ -11,8 +11,10 @@
 
         <b>{{ profil.username }}</b>
         <br>
+        {% if profil==app.user %}
 
         <a href="{{ path('fos_user_change_password') }}">Şifre değiştir</a>
+        {% endif %}
        <br>
             Kullanıcının yazdığı yazılar
         <hr><br>
